# mirai

./: Cargo.toml  README.md
mirai-core/: Cargo.toml
mirai-core/src/: lib.rs
mirai-game/: Cargo.toml
mirai-game-client/: Cargo.toml
mirai-game-client/src/: lib.rs
mirai-game/src/: game.rs  inputs.rs  main.rs
mirai-matchmaking-client/: Cargo.toml
mirai-matchmaking-client/src/: lib.rs
mirai-matchmaking-server/: Cargo.toml
mirai-matchmaking-server/src/: main.rs
mirai-server/: Cargo.toml
mirai-server/src/: main.rs
