[package]
name = "mirai-game"
version = "0.1.0"
authors = ["Heliozoa <dm89132@gmail.com>"]
edition = "2018"

[dependencies]
mirai-matchmaking-client = { path = "../mirai-matchmaking-client" }
ggez = "0.5"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.2"
crossbeam-channel = "0.3"
laminar = "0.3.2"
